fix: add z-index

--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -4,6 +4,7 @@
 	top: 0;
 	bottom: 0;
 	right: 0;
+	z-index: -1000;
 
 	visibility: hidden;
 
@@ -11,6 +12,8 @@
 }
 
 .modal_open {
+	z-index: 1000;
+
 	visibility: visible;
 }
 
